emf/static/emf/scss/whatson.scss
@charset "UTF-8";
@use 'colours' as *;
@use 'fonts' as *;
@use 'style';

body {
    max-width: 72em;
    margin: 2em auto;
    min-height: 100%;
    background-color: $background;
    color: $foreground;
    font-size: 12pt;
    font-family: $bodyFont;
}

a:link, a:visited, a:hover {
    color: $foreground;
}

h1, h2, h3, h4, h5, h6 {
    font-family: $headlineFont;
}

p:last-child {
    margin-bottom: 0;
}

header {
    margin-bottom: 2.5%;

    div {
        display: flex;
        width: 100%;
        align-items: center;

        .logo {
            flex: 2;

            img {
                width: 20em;
            }
        }

        h1 {
            text-align: center;
            font-size: 2.5em;
            flex: 7;
            margin-top: 0;
        }

        .status {
            flex: 1;
            flex-direction: column;
            align-items: flex-end;
            text-align: center;

            h2 {
                background: $background;
                color: $foreground;
                border-radius: 0.25em;
                border: 2px solid $foreground;
                padding: .25em .5em;
                margin: 0;
            }

            &.closed h2 {
                background-color: $background;
                color: $foreground;
            }

            &.open h2 {
                background-color: $foreground;
                color: $background;
            }

            p {
                margin: 1em 0 0 0;
            }
        }


    }
}

.split {
    display: flex;

    > div {
        background-color: rgba(255, 255, 255, 0.025);
        border: .15em solid rgba(255, 255, 255, 0.05);
        padding: 1em;
        border-radius: .25em;
        box-sizing: border-box;

        > h1 {
            margin-top: 0;
        }
    }

    & > div {
        flex: 1 1 auto;
        width: 50%;
        margin: 0 1em 1em 0;

        .align-bottom {
            margin-top: auto;
        }
    }

    & > div:first-child {
        margin-left: 0;
    }

    & > div:last-child {
        margin-right: 0;
    }
}

.button {
    display: inline-block;
    text-decoration: none;
    padding: 0.6em 1em;

    &:link, &:visited {
        color: $highlightAlt;
    }

    &:hover {
        color: $background;
        background-color: $highlightAlt;

        &.success {
            color: $background;
            background-color: $success;
        }

        &.warning {
            color: $background;
            background-color: $warning;
        }

        &.danger {
            color: $background;
            background-color: $danger;
        }
    }
}

.alert-block {
    padding: 1em;

    p:first-child {
        margin-top: 0;
    }

    p:last-child {
        margin-bottom: 0;
    }

    a:link, a:visited, a:hover {
        color: inherit;
        text-decoration: underline;
        font-weight: bold;
    }
}

.button, .alert-block {
    color: $highlightAlt;
    border: .15em solid $highlightAlt;
    border-radius: .25em;

    &.success {
        border-color: $success;
        color: $success;
    }

    &.warning {
        border-color: $warning;
        color: $warning;
    }

    &.danger {
        border-color: $danger;
        color: $danger;
    }
}

.products {
    display: grid;
    grid-template-columns: 30% 10% 15% 30% 15%;

    &.woloc {
        grid-template-columns: 40% 15% 20% 25%;

        .location, .locations {
            display: none;
        }
    }

    h2 {
        font-size: 1.25em;
        border-bottom: 1px solid white;
        margin: 1em 0 0 0;
        grid-column: 1 / -1;
    }

    .product {
        display: contents;
        text-decoration: none;

        > * {
            padding: 0.5em 0;
        }

        &.item {
            > * {
                transition: background-color .25s;
            }

            &:hover {
                >* {
                    background-color: rgba(255, 255, 255, 0.05) !important;
                }

                .name {
                    &:after {
                        opacity: 1;
                    }
                }
            }

            .name {
                &:after {
                    text-decoration: none;
                    content: ' \276F';
                    opacity: 0.5;
                    transition: opacity 0.25s;
                }
            }

            &:nth-child(even) > * {
                background-color: rgba(255, 255, 255, 0.025);
            }
        }

        .name {
            text-decoration: none;
        }

        &.head {
            background-color: transparent;
            font-weight: bold;
        }
    }
}

.location {
    background-color: $highlightBG;
    color: $highlightFG;
    padding: 0 0.5em;
    border-radius: 1em;
    margin-right: 0.2em;
    font-size: 0.9em;
    white-space: nowrap;

    &::before {
        padding-right: 0.2em;
    }

    &.cybar {
        background-color: $danger;
        &::before { content: "🤖"; }
    }

    &.robotarms {
        background-color: $warning;
        &::before { content: "🍺"; }
    }

    &.spacebar {
        background-color: $success;
        &::before { content: "🚀"; }
    }
}

.productPage {
    display: grid;
    grid-template-columns: 2fr 1fr;
    gap: 1em;

    .productLogo {
        text-align: right;

        img {
            width: 75%;;
        }
    }

    .productDetails {
        .name {
            font-size: 3em;
            margin-bottom: 0;
        }

        .abv {
            font-size: 1.5em;
        }

        div {
            h2 {
                margin-bottom: 0;
            }
        }

        .locations {
            margin-top: 2em;

            ul {
                list-style: none;
                padding: 0;

                li {
                    display: inline;
                    margin-right: .5em;
                }
            }
        }

        .remaining {
            p {
                margin-top: 0.5em;
            }
        }
    }
}



.connection-status {
    position: fixed;
    color: $background;
    background-color: $warning;
    font-weight: bold;
    border-radius: .25em;
    padding: 1em;
    bottom: 1em;
    right: 1em;

    display: none;

    &.disconnected {
        display: block;
    }
}


@media screen and ( max-width: 76em ) {
    body {
        margin: 2em;
    }

    .productPage {
        grid-template-columns: 1fr 1fr;
    }

    header {
        div {
            .logo {
                flex: auto;

                img {
                    width: 15em;
                }
            }
        }
    }

    table {
        .stock {
            text-align: center;
            .text {
                display: none;
            }
            .orb {
                width: 1em;
                height: 1em;
                margin-bottom: -0.1em;
                border-radius: 1em;
            }
        }
    }

    .products {
        display: block;

        h2 {
            font-size: 1.5em;
            border-bottom: none;
            margin: 1em 0 0 0;
            grid-column: 1 / -1;
        }

        .product {
            display: flex;
            flex-wrap: wrap;
            padding: 1em;
            margin: 1em 0;
            border: 1px solid rgba(255, 255, 255, 0.05);
            background-color: rgba(255, 255, 255, 0.025);
            transition: background-color 0.25s;

            > * {
                padding: 0;
            }

            &.item {
                &:hover {
                    background-color: rgba(255, 255, 255, 0.05);

                    > * {
                        background-color: transparent !important;
                    }
                }

                &:nth-child(even) > * {
                    background-color: transparent;
                }
            }

            &.head {
                display: none;
            }

            .name {
                flex: 1;
                order: 1;
                font-weight: bold;
                font-size: 1.25em;
            }

            .stock {
                order: 2;
                margin-left: 0.5em;
            }

            .abv, .price, .locations {
                order: 3;
                width: 100%;
                line-height: 1.75em;
            }

            .locations:not(:empty) {
		        &::before {
                    content: "Available at: ";
		        }
	        }

            .abv:not(:empty) {
                &::before {
                    content: "ABV: ";
                }
            }
        }
    }

}

@media screen and ( max-width: 768px ) {
    .productPage {
        grid-template-columns: 1fr;
        grid-template-rows: auto auto;

        .productDetails {
            order: 2;

            h1 {
                margin-top: .25em;
            }
        }

        .productLogo {
            order: 1;
            width: 100%;
            text-align: center;
        }
    }

    header {
        div {
            flex-direction: column;
            align-items: center;

            h1 {
                margin-top: .7em;
                width: 100%;
            }

            .status {
                align-items: center;
            }

        }
    }

    .split {
        display: block;

        & > div {
            width: 100%;
            flex: unset;
            margin: 0 0 1em 0;
        }
    }
}

